--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,81 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+.flowers{
+  background-image:url("/flowers.png");
+  background-size:100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.blurbg{
+  background-color:rgba(0, 0, 0, 0.5);
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
+  position:fixed;
+  backdrop-filter:blur(2px);
+  z-index:50;
+}
+
+.modalcenter{
+  transform: translate(-50%, -50%);
+  position:relative;
+  top:50%;
+  left:50%;
+  z-index:100;
+}
+
+@keyframes winecoral-fade{
+  0%{
+    background-color:theme('colors.wine');
+  }
+  100%{
+    background-color:theme('colors.coral');
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.wine-to-coral{
+  width:20vw;
+  height:2em;
+  background-color:theme('colors.wine');
+  transition: 0.1s;
+}
+
+.wine-to-coral:hover{
+  animation: winecoral-fade 0.1s;
+  background-color:theme('colors.coral');
+}
+
+.wine-to-coral:not(:hover){
+  animation: winecoral-fade 0.1s;
+  animation-direction: reverse;
+}
+
+@keyframes blueswipe{
+  0%{
+    background-color:white;
+  }
+  100%{
+    background-color:theme('colors.paleblue');
+  }
+}
+
+.inputfield{
+  width:24vw;
+  height:1.8em;
+  border-radius:0.3em;
+  transition:0.25s;
+  border:none;
+  outline:none;
+}
+
+.inputfield:focus{
+  animation: blueify 0.25s;
+  background-color:theme('colors.paleblue');
+}
+
+.inputfield:not(:focus){
+  animation:blueify 0.25s;
+  animation-direction: reverse;
 }
