--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,13 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-.flowers{
-  background-image:url("/flowers.png");
-  background-size:100%;
+.circbg{
+  background-image:radial-gradient(circle at 65% 20%,
+  rgba(232,252,251,1) 0%, rgba(254,249,243,1) 20%,
+  rgba(251,240,252,1) 40%, rgba(255,255,255,1) 55%);
 }
 
 .blurbg{
-  background-color:rgba(0, 0, 0, 0.5);
+  background-color:rgba(100, 100, 100, 0.15);
   width:100%;
   height:100%;
   top:0;
@@ -19,59 +20,102 @@
 }
 
 .modalcenter{
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0);
   position:relative;
-  top:50%;
   left:50%;
   z-index:100;
 }
 
-@keyframes winecoral-fade{
+.inputfield-text{
+  font-size: 0.85em;
+  color: rgba(30, 30, 30, 0.9)
+}
+
+.title-text{
+  font-size: 1.8em;
+  color: rgba(0, 0, 0, 0.9);
+  text-align:center;
+}
+
+.subtitle-text{
+  font-size: 0.9em;
+  color: rgba(70, 70, 80, 0.9);
+  text-align:center;
+}
+
+.submit-text{
+  font-size: 0.9em;
+  color: rgba(255, 255, 255, 0.9);
+  text-align:center;
+}
+
+.language-options-text{
+  font-size: 0.9em;
+  color: rgba(30, 30, 30, 0.9);
+  text-align:left;
+}
+
+@keyframes antblue-fade{
   0%{
-    background-color:theme('colors.wine');
+    background-color:theme('colors.antblue');
   }
   100%{
-    background-color:theme('colors.coral');
+    background-color:theme('colors.antbluelight');
   }
 }
 
-.wine-to-coral{
-  width:240px;
-  height:2em;
-  background-color:theme('colors.wine');
+.antblue-button{
+  height:1.95em;
+  background-color:theme('colors.antblue');
   transition: 0.1s;
 }
 
-.wine-to-coral:hover{
-  animation: winecoral-fade 0.1s;
-  background-color:theme('colors.coral');
-}
-
-.wine-to-coral:not(:hover):not(.no-reverse){
-  animation: winecoral-fade 0.1s;
-  animation-direction: reverse;
+.antblue-button:hover{
+  animation: antblue-fade 0.1s;
+  background-color:theme('colors.antbluelight');
 }
 
 @keyframes blueify{
   0%{
     width: 0;
-    background-color:white;
+    background-color:theme('colors.paleblue');
     transform: translateX(0);
   }
   100%{
-    width: 280px;
+    width: 300px;
+    background-color:theme('colors.palepaleblue');
+    transform: translateX(-150px);
+  }
+}
+
+@keyframes blueify-small{
+  0%{
+    width: 0;
     background-color:theme('colors.paleblue');
-    transform: translateX(-140px);
+    transform: translateX(0);
+  }
+  100%{
+    width: 200px;
+    background-color:theme('colors.palepaleblue');
+    transform: translateX(-100px);
+  }
+}
+
+@keyframes blueify-border{
+  0%{
+    border-color:transparent;
+  }
+  100%{
+    border-color:theme('colors.antbluetrans')
   }
 }
 
 .inputfield{
-  width:280px;
-  height:1.8em;
-  border-radius:0.3em;
-  border:none;
+  height:1.95em;
   outline:none;
+  border:solid 1px transparent;
   z-index:2;
+  transition: 0.3s cubic-bezier(.12,.84,.28,.94);
 }
 
 .container{
@@ -80,38 +124,142 @@
 }
 
 .inputfield:focus + .inputfield-above{
-  animation: blueify 0.5s;
-  width: 280px;
-  background-color:theme('colors.paleblue');
-  transform: translateX(-140px);
+  animation: blueify 0.3s;
+  width: 300px;
+  background-color:theme('colors.palepaleblue');
+  transform: translateX(-150px);
 }
 
-.inputfield:not(:focus) + .inputfield-above:not(.no-reverse){
-  animation:blueify 0.5s;
-  animation-direction: reverse;
+.inputfield:focus + .inputfield-small-above{
+  animation: blueify-small 0.3s;
+  width: 200px;
+  background-color:theme('colors.palepaleblue');
+  transform: translateX(-100px);
+}
+
+.inputfield:focus{
+  animation: blueify-border 0.3s;
+  border-color: theme('colors.antbluetrans')
 }
 
 .inputfield-below{
   position:absolute;
   top:0;
   left:0;
-  width:280px;
-  height:1.8em;
-  border-radius:0.3em;
+  height:1.95em;
 }
 
 .inputfield-above{
   position:absolute;
   top:0;
-  left:140px;
-  width:0vw;
-  height:1.8em;
-  border-radius:0.3em;
-  transition: 0.5s cubic-bezier(.12,.84,.28,.94);
+  left:150px;
+  width:0;
+  height:1.95em;
+  transition: 0.3s cubic-bezier(.12,.84,.28,.94);
   z-index:1;
 }
 
-.language-button{
+.inputfield-small-above{
+  position:absolute;
+  top:0;
+  left:100px;
+  width:0;
+  height:1.95em;
+  transition: 0.3s cubic-bezier(.12,.84,.28,.94);
+  z-index:1;
+}
+
+.language-selector{
   position:fixed;
+  left: 100%;
+  top: 0%;
+  transform: translate(-100%, 0%) translateX(-0em);
+  z-index:105;
+}
+
+.language-button{
+  position:relative;
+  z-index:105; 
+  border: none;
+  outline: none;
+}
+
+.language-options{
+  display:none;
+  position:relative;
+  transform: scaleY(0);
+  transform-origin:top;
   z-index:110; 
+  transition: 0.3s cubic-bezier(.12,.84,.28,.94);
+}
+
+@keyframes lb-stretch{
+  0%{
+      transform: scaleY(0);
+  }
+  100%{
+      transform: scaleY(1);
+  }
+}
+
+.language-selector:hover .language-options {
+  display:flex;
+  animation: lb-stretch 0.3s;
+  transform: scaleY(1);
+}
+
+.authtype-underline{
+  border-color:rgba(70, 70, 80, 0.3);
+}
+
+.login-selector-trans{
+  animation: login-selector-trans-animation 0.3s linear;
+}
+
+@keyframes login-selector-trans-animation{
+  0%{
+    transform:scale(1);
+    border-color:transparent;
+  }
+  25%{
+    transform:scale(1.1);
+  }
+  50%{
+    transform:scale(1);
+  }
+  100%{
+    transform:scale(1);
+    border-color:theme('colors.antblue');
+  }
+}
+
+.getcode-button{
+  transition: 0.3s cubic-bezier(.12,.84,.28,.94);
+  border-width:1px;
+  background-color: theme('colors.paleblue');
+  color: rgba(70,70,80,0.9);
+}
+
+.getcode-button:hover{
+  animation: getcode-button-outline 0.3s;
+  border-color: theme('colors.lagoonbluetrans');
+  background-color: theme('colors.aquabluetrans');
+  color: theme('colors.antblue');
+}
+
+@keyframes getcode-button-outline{
+  0%{
+    border-color: rgba(70,70,80,0.9);
+    background-color: theme('colors.paleblue');
+    color: rgba(30, 30, 30, 0.9)
+  }
+  100%{
+    border-color: theme('colors.lagoonbluetrans');
+    background-color: theme('colors.aquabluetrans');
+    color: theme('colors.antblue');
+  }
+}
+
+.barwidth{
+  width:300px;
 }
